postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db-stateful
spec:
  selector:
    matchLabels:
      app: postgres-db
  serviceName: "postgres-db-service"
  replicas: 3
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres-db
        image: postgres:13
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: postgres-pv
          mountPath: /var/database-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-pv
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  namespace: default
spec:
  selector:
    app: postgres-db
  type: ClusterIP
  ports:
  - name: postgres
    protocol: TCP
    port: 8080
    targetPort: 8080
