drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
spec:
  rules:
  - host: bbyra-drupal.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: drupal-service
            port:
              number: 8080
